deploy/baikal/baikal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: baikal
  namespace: baikal
  labels:
    app: baikal
spec:
  ports:
    - port: 80
  selector:
    app: baikal
  type: ClusterIP
