deploy/baikal/baikal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-collection@kubernetescrd
  name: baikal
  namespace: baikal
spec:
  rules:
  - host: baikal.nuc.one
    http:
      paths:
      - backend:
          service:
            name: baikal
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
